platform/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Idenifier__c</fullName>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Contact Idenifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Info__c</fullName>
        <label>Site Contact Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Contact_MAC_Address__c</fullName>
        <label>Site Contact MAC Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact_Specifics__c</fullName>
        <label>Type of Contact Specifics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Asst Store Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community BKG District MGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPG Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Critical Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Teller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Negotiator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Support Consultant (MSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Services Manager (DSSG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Service Leader</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendors__c</referenceTo>
        <relationshipLabel>Vendor Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>